# Novatus-Early-Access-Backend

./: pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  publish-ghcr.yaml
docker/: Dockerfile.prod  docker-compose.yaml
src/: main.py
src/api/: endpoint.py
src/api/routes/: early_access.py
src/core/: config.py
src/models/schema/: early_access.py
src/utils/: formatter.py  gdrive_handler.py
tests/: conftest.py
